--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -51,7 +51,7 @@
   </div>
 </section>
 
-<!-- <section class="section--center mdl-grid mdl-grid--no-spacing mdl-shadow--2dp">
+<section *ngIf="isUnei()" class="section--center mdl-grid mdl-grid--no-spacing mdl-shadow--2dp">
   <div class="mdl-card__title mdl-card--expand">
     <h2 class="mdl-card__title-text">各チームのスコア</h2>
   </div>
@@ -73,7 +73,7 @@
       </button>
     </a>
   </div>
-</section> -->
+</section>
 
 <section *ngIf="isLoggedIn" class="section--center mdl-grid mdl-grid--no-spacing mdl-shadow--2dp">
   <div class="mdl-card__title mdl-card--expand">
